--- a/app/src/app.css
+++ b/app/src/app.css
@@ -14,7 +14,7 @@ body {
     color: #474942;
 }
 
-.container {
+.background {
     max-width: 400px;
     width: 100%;
     margin: 0 auto;
@@ -22,34 +22,52 @@ body {
     background-size: cover;
     min-height: 100vh;
     overflow: auto;
+    background-attachment: fixed;
 }
 
 .container-inner {
     padding: 4rem 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .button {
-    background: #ce8169;
-    padding: 1rem;
+    background: #779888;
+    padding: 1rem 2rem;
     text-decoration: none;
     border: none;
     font-size: 18px;
-    text-transform: uppercase;
     font-family: 'Crimson Pro', serif;
     font-weight: bold;
+    border-radius: 10px;
+    color: #eae0cd;
+    font-weight: bold;
+    display: block;
+    max-width: 6rem;
+    margin: 1rem 0;
 }
 
 h1 {
     font-family: 'Amsterdam', cursive;
-    font-size: 3rem;
-    line-height: 1.5;
+    font-size: 1.5rem;
     text-align: center;
 }
 
-input[type=text] {
+input[type=text], input[type=number] {
     padding: 1rem;
     font-family: 'Crimson Pro', serif;
     font-size: 18px;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+}
+
+input[type=number] {
+    width: 2.5rem;
+    height: 2.5rem;
+    text-align: center;
+    border-radius: 50%;
 }
 
 ul {
